--- a/AspireApp.ApiService/AspireApp.ApiService.csproj
+++ b/AspireApp.ApiService/AspireApp.ApiService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspireApp.Persistence\AspireApp.Persistence.csproj" />
     <ProjectReference Include="..\AspireApp.ServiceDefaults\AspireApp.ServiceDefaults.csproj" />
   </ItemGroup>
 
