--- a/AspireApp.AppHost/appsettings.json
+++ b/AspireApp.AppHost/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "postgres": "Host=localhost;Database=AspireAppDb;Username=monuser;Password=monmdp"
   }
 }
